# road-signs-cnn

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  slides.md
checkpoints/: checkpoint.pt  checkpoint_lr=1E-01_epoch=03.pt  checkpoint_lr=1E-01_epoch=06.pt  checkpoint_lr=1E-01_epoch=09.pt  checkpoint_lr=1E-01_epoch=12.pt  checkpoint_lr=1E-01_epoch=15.pt  checkpoint_lr=1E-02_epoch=03.pt  checkpoint_lr=1E-02_epoch=06.pt  checkpoint_lr=1E-02_epoch=09.pt  checkpoint_lr=1E-02_epoch=12.pt  checkpoint_lr=1E-02_epoch=15.pt  checkpoint_lr=1E-03_dropout=0.0_epoch=03.pt  checkpoint_lr=1E-03_dropout=0.0_epoch=06.pt  checkpoint_lr=1E-03_dropout=0.0_epoch=09.pt  checkpoint_lr=1E-03_dropout=0.0_epoch=12.pt  checkpoint_lr=1E-03_dropout=0.0_epoch=15.pt  checkpoint_lr=1E-03_dropout=0.1_epoch=03.pt  checkpoint_lr=1E-03_dropout=0.1_epoch=06.pt  checkpoint_lr=1E-03_dropout=0.1_epoch=09.pt  checkpoint_lr=1E-03_dropout=0.1_epoch=12.pt  checkpoint_lr=1E-03_dropout=0.1_epoch=15.pt  checkpoint_lr=1E-03_dropout=0.2_epoch=03.pt  checkpoint_lr=1E-03_dropout=0.2_epoch=06.pt  checkpoint_lr=1E-03_dropout=0.2_epoch=09.pt  checkpoint_lr=1E-03_dropout=0.2_epoch=12.pt  checkpoint_lr=1E-03_dropout=0.2_epoch=15.pt  checkpoint_lr=1E-03_dropout=0.3_epoch=03.pt  checkpoint_lr=1E-03_dropout=0.3_epoch=06.pt  checkpoint_lr=1E-03_dropout=0.3_epoch=09.pt  checkpoint_lr=1E-03_dropout=0.3_epoch=12.pt  checkpoint_lr=1E-03_dropout=0.3_epoch=15.pt  checkpoint_lr=1E-03_dropout=0.4_epoch=03.pt  checkpoint_lr=1E-03_dropout=0.4_epoch=06.pt  checkpoint_lr=1E-03_dropout=0.4_epoch=09.pt  (+57 more)
figures/: data_balance.py  (+5 more)
(+32 files in other folders)
